@@ -1,3 +1,8 @@
+2012-08-06  Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* coders/jnx.c: Image cache is turned off to workaround memory overflow.
+
+
 2012-08-05  Fojtik Jaroslav  <JaFojtik@seznam.cz>
 
 	* coders/jnx.c: Fixed.
